toc box dark mode fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,9 @@ i.bx-sun{
     .post-title{
     color: var(--dark-text-color);
     }
+    #toctitle{
+        color: var(--container-color);
+    }
     .post-date{
     color: var(--dark-text-color);
     }
